--- a/images/style.css
+++ b/images/style.css
@@ -18,6 +18,10 @@ body {
   font-color: #313131;
   text-align: center; }
 
+#sidebar li {
+  display: inline-block;
+}
+
 li.none {
     margin-bottom: 15px;
     padding-left: 0px;
@@ -141,7 +145,8 @@ li.none:before {
     margin: 0px 0 0px 0px;
     position: relative;
     text-align: left; 
-    padding-left: 130px;
+    width: 600px;
+    margin: 0 auto;
   }
 
 .step2 {
@@ -150,7 +155,8 @@ li.none:before {
     position: relative;
     text-align: left; 
     padding-bottom: 30px;
-    padding-left: 130px;
+    width: 600px;
+    margin: 0 auto;
   }
 
 .audio1 {
@@ -663,6 +669,17 @@ img {
   }
 
 }
+
+
+.list {
+  text-align:left;
+  max-width: 500px;
+  font-size: clamp(20px, 4vw, 30px);
+  line-height: 150%;
+  font-weight: 900;
+  margin: 0 auto;
+}
+
 
 
 /* ====================================================
